Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-8026

Smart installer workflow is too complicated for self-signed case, simplify it

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 4.6.2
    • 4.6.2
    • None
    • None
    • b37ac454832a23c17418f5ebca8928b63fe02289

      Smart installer workflow is too complicated for self-signed case, simplify it

      • There is need to require installer package uid to be defined for the simple case, so don't require it.
      • Requiring user to rename a package manually is cludgy, fix that. There should be make target for generating smart installer package.
      • Generate application.sis if it doesn't exist when calling "make installer_sis"
      • Fix docs

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            e0348803 Miikka Heikkinen
            e0348803 Miikka Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes