Streamlined smart installer package creation in Symbian

- Added make target for creating smart installer packages
- Application sis is automatically generated if missing when
  "make installer_sis" is invoked
- No need to specify installer pkg UID if self signing is enough
- Related docs fixed
- Fixed smartinstaller.sis name to be correct

Task-number: QTBUG-8026
Reviewed-by: axis
(cherry picked from commit b37ac454832a23c17418f5ebca8928b63fe02289)